<resources>
    <string name="app_name">Hitung BMI</string>
    <string name="bmi_intro">BMI, atau Body Mass Index merupakan cara untuk menentukan apakah berat badanmu ideal atau tidak. Cobalah sekarang!</string>
    <string name="bb_label">Berat Badan (kg)</string>
    <string name="tinggi_label">Tinggi Badan (cm)</string>
    <string name="gender_label">Jenis Kelamin</string>
    <string name="female">Wanita</string>
    <string name="male">Pria</string>
    <string name="hitung_btn">Hitung</string>
    <string name="bmi_x">BMI: %1$.2f</string>
    <string name="kategori_x">Kategori: %1$s</string>
    <string name="kurus">Kurus</string>
    <string name="ideal">Ideal</string>
    <string name="gemuk">Gemuk</string>
    <string name="berat_invalid">Berat tidak boleh kosong.</string>
    <string name="tinggi_invalid">Tinggi tidak boleh kosong.</string>
    <string name="gender_invalid">Pilih jenis kelamin.</string>
</resources>